[gd_scene load_steps=5 format=3 uid="uid://4cbnh5y5ntbv"]

[ext_resource type="Script" path="res://Scripts/db_manager.gd" id="1_icba0"]
[ext_resource type="FontFile" uid="uid://lumnleqyj4qc" path="res://Fonts/PixelifySans.ttf" id="1_tsr4s"]

[sub_resource type="Theme" id="Theme_w1ram"]
default_font = ExtResource("1_tsr4s")

[sub_resource type="Theme" id="Theme_1sfqw"]
default_font = ExtResource("1_tsr4s")

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_icba0")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -57.0
offset_top = -90.0
offset_right = 24.0
offset_bottom = -67.0
theme_override_fonts/font = ExtResource("1_tsr4s")
text = "Username:"

[node name="Username" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = -58.0
offset_top = -63.0
offset_right = 9.06238
offset_bottom = -32.0
scale = Vector2(2.5, 1)
theme = SubResource("Theme_w1ram")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -57.0
offset_top = -26.0
offset_right = 28.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("1_tsr4s")
text = "Password:"

[node name="Password" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = -58.0
offset_right = 9.0625
offset_bottom = 31.0
scale = Vector2(2.5, 1)
theme = SubResource("Theme_1sfqw")
theme_override_fonts/font = ExtResource("1_tsr4s")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 39.0
offset_right = 49.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("1_tsr4s")
text = "Login"

[node name="ChangeLogin" type="Button" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = 81.0
offset_right = 100.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("1_tsr4s")
text = "Create an Account"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ChangeLogin" to="." method="_on_change_login_pressed"]
