[gd_scene load_steps=5 format=3 uid="uid://dgcwca86qqu0w"]

[ext_resource type="FontFile" uid="uid://lumnleqyj4qc" path="res://Fonts/PixelifySans.ttf" id="1_71op4"]
[ext_resource type="Script" path="res://Scripts/db_manager.gd" id="1_j8iyy"]

[sub_resource type="Theme" id="Theme_ii11y"]
default_font = ExtResource("1_71op4")

[sub_resource type="Theme" id="Theme_oi1e3"]
default_font = ExtResource("1_71op4")

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8iyy")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -81.0
offset_top = -113.0
offset_bottom = -90.0
theme_override_fonts/font = ExtResource("1_71op4")
text = "Username:"

[node name="Username" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -82.0
offset_top = -86.0
offset_right = -14.9376
offset_bottom = -55.0
scale = Vector2(2.5, 1)
theme = SubResource("Theme_ii11y")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -81.0
offset_top = -49.0
offset_right = 4.0
offset_bottom = -26.0
theme_override_fonts/font = ExtResource("1_71op4")
text = "Password:"

[node name="Password" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -82.0
offset_top = -23.0
offset_right = -14.9375
offset_bottom = 8.0
scale = Vector2(2.5, 1)
theme = SubResource("Theme_oi1e3")
theme_override_fonts/font = ExtResource("1_71op4")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = -81.0
offset_top = 14.0
offset_right = 61.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("1_71op4")
text = "Repeat Password:"

[node name="Repeat" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -82.0
offset_top = 40.0
offset_right = -14.9375
offset_bottom = 71.0
scale = Vector2(2.5, 1)
theme = SubResource("Theme_oi1e3")
theme_override_fonts/font = ExtResource("1_71op4")

[node name="Register" type="Button" parent="."]
layout_mode = 0
offset_left = -41.0
offset_top = 79.0
offset_right = 38.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("1_71op4")
text = "Register"

[connection signal="pressed" from="Register" to="." method="_on_register_pressed"]
